--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -8,6 +8,7 @@ inputs:
       source: defaultSource
       path: ./dummy.csv
       ignoreFirstRow: true
+      delimiter: ","
       columns:
         id:
           type: integer
