--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.8'
 
 services:
   tests:
+    tty: true
     build:
       context: .
       dockerfile: ./build/docker/service.Dockerfile
