Starting to implement the jsonObject output

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -75,4 +75,5 @@ outputs:
       service: defaultService
       endpoint: "/dummies/?"
       index: defaultIndex
+      input: defaultInput
       # TODO handle this even without index (basic search)
