--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -61,7 +61,6 @@ outputs:
       service: defaultService
       endpoint: "/"
       # TODO configuration
-  # TODO have the dumb index as a default value if no index is specified
   defaultJsonArrayOutput:
     jsonArray:
       service: defaultService
@@ -80,6 +79,7 @@ outputs:
         # TODO handle the filters even without index (basic search)
   defaultJsonObjectOutput:
     # TODO test the jsonObject
+    # TODO test the parsers
     jsonObject:
       service: defaultService
       input: defaultInput
