Showing the service address in the console

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -58,7 +58,7 @@ services:
   defaultService:
     http:
       # TODO add health-checks
-      port: 80
+      listen: ":80"
   # TODO https service
   # TODO websocket service
   # TODO console (stin pipeable?) service
