--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,4 +1,5 @@
 # TODO add the default objects in the default config method
+# TODO add or move the name inside the config to simplify validation and improve errors
 # TODO manually fill the config structs and default values from yaml maps?
 # TODO test the configuration validators
 # TODO completely test the configuration against the rootConfig (and remove comments about checking at runtime)
