--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,5 +1,5 @@
-# TODO add or move the name inside the config to simplify validation and improve errors?
 # TODO test all the configs against the rootConfig (and remove comments about checking at runtime)
+# TODO add or move the name inside the config to simplify validation and improve errors?
 # TODO performance analysis
 parsers:
   defaultInteger:
@@ -60,7 +60,7 @@ services:
     http:
       # TODO add health-checks
       listen: ":80"
-      # TODO errors type
+      errorsType: application/json
   # TODO https service
   # TODO authentication
   # TODO websocket service
