Improving the config errors and logging

--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,5 +1,5 @@
+# TODO inject contextualized logger (entry) to the config in the config rather than via the constructors
 # TODO test all the configs against the rootConfig (and remove comments about checking at runtime)
-# TODO add or move the name inside the config to simplify validation and improve errors?
 # TODO performance analysis
 parsers:
   defaultInteger:
