--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,6 +1,7 @@
 # TODO data from stdin? Test reading /dev/stdin
 # TODO e2e tests?
 # TODO performance analysis
+# TODO remove nilable configurations?
 parsers:
   defaultInteger:
     integer:
@@ -118,7 +119,9 @@ outputs:
               match:
                 - parentColumn: id
                   childColumn: id
-          # TODO relationship sorting?
+              sort:
+                - column: id
+                  ascending: true
       parameters:
         - column: id
           parser: integer
