--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -132,5 +132,6 @@ outputs:
                 - column: id
                   ascending: true
       parameters:
+        # TODO add a limit to the join method, use it here (move the index in each param)
         - column: id
           parser: integer
