--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,7 +1,7 @@
-# TODO test all the jsonArray output
-# TODO improve error messages send to the services by the outputs
-# TODO data from stdin? Test reading /dev/stdin
-# TODO e2e tests? (test data + relationships returned by the service from the config)
+# TODO manually test the jsonArray output
+# TODO test jsonArray.getLimit
+# TODO test jsonArray.getFiltersPerIndex
+# TODO e2e tests? (jsonArray + jsonObject, data + relationships)
 # TODO performance analysis
 parsers:
   defaultInteger:
@@ -21,6 +21,7 @@ parsers:
 sources:
   defaultSource:
     filesystem:
+      # TODO data from stdin? Test reading /dev/stdin
       path: ./
   # TODO S3 source
   # TODO http source
