--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,6 +1,8 @@
-# TODO manually test the jsonArray output
+# TODO manually test the jsonArray output (finish debugging + uncomment and test the search)
 # TODO test jsonArray.getLimit
 # TODO test jsonArray.getFiltersPerIndex
+# TODO index get: dependency-inject the input directly instead of the input name?
+# TODO move the watch and fail logic directly into the source (otherwise we cannot be sure that the IterateAll() works)
 # TODO e2e tests? (jsonArray + jsonObject, data + relationships)
 # TODO performance analysis
 parsers:
