--- a/examples/zip-codes-tokyo/config.yaml
+++ b/examples/zip-codes-tokyo/config.yaml
@@ -85,6 +85,40 @@ services:
       listen: ":80"
       errorsType: application/json
 outputs:
+  listPostalCodes:
+    jsonArray:
+      input: zipCodesTokyo
+      services:
+        - httpService
+      endpoint: "/zip-codes"
+      limit:
+        default: 100
+        max: 1000
+        parameter: "limit"
+      offset:
+        parameter: "offset"
+      #search:
+      #  id:
+      #    column: id
+      #    index: defaultIndex
+      #    parser: integer
+      #  name:
+      #    column: name
+      #    index: defaultIndex
+      #    parser: string
+      relationships:
+        updated:
+          input: updatedValues
+          match:
+            - parentColumn: updatedId
+              childColumn: id
+              childIndex: default
+        reasonsForUpdate:
+          input: reasonsForUpdate
+          match:
+            - parentColumn: reasonForUpdateId
+              childColumn: id
+              childIndex: default
   findOnePostalCode:
     jsonObject:
       input: zipCodesTokyo
